<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/profile_textbutton_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_textbutton_cancelar"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="#E5E5E5"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/profile_text_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/profile_username"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/profile_email_user"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorGrayLight"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/profile_name"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/profile_name_user"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/profile_dni"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_edit_dni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/profile_dni_user"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="30dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/profile_lastname"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_edit_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/profile_lastname_user"
                        android:maxLines="1" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/profile_district"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_edit_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/profile_district_user"
                        android:maxLines="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile_email"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/profile_email_user"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile_address"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_text_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/profile_address_user"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile_reference"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_edit_reference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@string/profile_reference_user"
                    android:maxLines="2" />

            </LinearLayout>

            <Button
                android:id="@+id/profile_button_update"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/profile_button_update"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorAccent"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>